# Codeschnippsel

./: .gitignore  Codeschnippsel.cabal
src/: AlgebraischeDatentypen.hs
