name:           Codeschnippsel
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         tnfink

executable AlgebraischeDatentypen
  build-depends:   
                   base >= 4,
                   hspec >= 1.4.5
  hs-source-dirs:  src
  ghc-options:     -Wall -rtsopts
  main-is:         AlgebraischeDatentypen.hs

